bsd-platform-apis/bsd-platform-apis.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apis-ingress
  namespace: apis
  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # tls:
  #   - hosts:
  #       - apis.yourdomain.io
  #     secretName: apis-tls
  rules:
    - host: apis.bradbird.co.uk
      http:
        paths:
          - path: /test-api
            pathType: Prefix
            backend:
              service:
                name: test-api
                port:
                  number: 5100
